k8s/namespaces/media/qbittorrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: media
  labels:
    app.kubernetes.io/name: qbittorrent
    app.kubernetes.io/managed-by: flux
spec:
  selector:
    app.kubernetes.io/name: qbittorrent
    app.kubernetes.io/managed-by: flux
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: qbittorrent
  type: ClusterIP
